5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1712_2499.log
== TEST (2019-05-13 23:40:36) 
-- CODE:
from math import *
k = int(input("k: "))
v = 1
e = 1
while (n > 0 and n != v):
	e = e + 1/factorial(k)
	t = t + 1
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while (n > 0 and n != v):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:41:08) 
-- CODE:
from math import *
k = int(input("k: "))
v = 1
e = 1
while (k > 0 and k != v):
	e = e + 1/factorial(k)
	t = t + 1
print(round(e, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = t + 1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:41:27) 
-- CODE:
from math import *
k = int(input("k: "))
t = 1
e = 1
while (k > 0 and k != t):
	e = e + 1/factorial(k)
	t = t + 1
print(round(e, 8))
-- OUTPUT:
1.00119048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 23:41:48) 
-- CODE:
from math import *
k = int(input("k: "))
t = 1
e = 1
while (k > 0 and k != t):
	e = e + 1/factorial(t)
	t = t + 1
print(round(e, 8))
-- EXECUTION TIME:
0.209698
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
